rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__validate__tests__missing_star.snap
---
source: crates/rax-nmea/src/rules/validate.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing checksum delimiter: expected '*', got '$GPGGA,123519,4807.038,N,01131.000,E,1,08,0.9,545.4,M,46.9,M,,47'",
    },
)
