rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__validate__tests__short_checksum.snap
---
source: crates/rax-nmea/src/rules/validate.rs
expression: result
---
Err(
    RuleError {
        reason: "Invalid checksum length: expected 2, got 1",
    },
)
